--- a/utils/Graphs/DrawMap.ipynb
+++ b/utils/Graphs/DrawMap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "19  map[node_12:true node_14:true node_17:true nod...  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,9 @@
     "import pandas as pd\n",
     "import scipy.optimize as opt;\n",
     "\n",
-    "Df = pd.read_csv(\"../../membershipchainservice/Data/gentree-node_0-epoch9\")\n",
+    "epoch = 9\n",
+    "\n",
+    "Df = pd.read_csv(\"../../membershipchainservice/Data/gentree-node_0-epoch\"+str(epoch))\n",
     "Df"
    ]
   },
@@ -1086,68 +1088,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>291.643810</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>153.189385</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>219.441565</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            0\n",
-       "1  291.643810\n",
-       "2  153.189385\n",
-       "3  219.441565"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "node = Df[Df[\"Name\"]==\"node_0\"]\n",
-    "cl = list(Df[Df[\"Name\"]==\"node_0\"].cluster_list)[0]\n",
-    "\n",
-    "distance_lambda = lambda row : np.sqrt((row.X-node.X)**2 + (row.Y-node.Y)**2)\n",
-    "Df[Df[\"Name\"].isin(cl)].apply(distance_lambda, axis=1)"
+    "with open('epoch'+str(epoch)+'_map.svg', 'wb') as f:\n",
+    "    f.write(svgio.getvalue())\n",
+    "svgio.close()"
    ]
   },
   {
